Fixed bg-image sizing on smaller screens + task 5 flaoting tt

--- a/task/css/main.css
+++ b/task/css/main.css
@@ -1,7 +1,8 @@
 :root {
   --timer: 100%;
 
-  --image-height: calc((100vw - 1rem) * (1139 / 4176));
+  --image-height: calc((1050px - 1rem) * (1139 / 4176));
+  /*--image-height: calc((100vw - 1rem) * (1139 / 4176));*/
 
   --currentX: 0;
   --currentY: 0;
